@@ -1,15 +1,14 @@
-package io.github.teardrop13.financemanager.service;
+package pl.teardrop.financemanager.service;
 
-import io.github.teardrop13.authentication.user.User;
-import io.github.teardrop13.financemanager.model.Category;
-import io.github.teardrop13.financemanager.repository.CategoryRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import pl.teardrop.authentication.user.User;
+import pl.teardrop.financemanager.model.Category;
+import pl.teardrop.financemanager.repository.CategoryRepository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -21,7 +20,7 @@ public class CategoryService {
 	public List<Category> getByUser(User user) {
 		return categoryRepository.findByUserOrderByPriority(user).stream()
 				.filter(c -> !c.isDeleted())
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public Optional<Category> getById(long id) {
